chore: meta infos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pedro Henrique | Desenvolvedor Full Stack" />
     <meta property="og:description" content="Portfólio de Pedro Henrique - Transformando ideias em soluções reais com código." />
-    <meta property="og:image" content="/eu2.jpg" />
+    <meta property="og:image" content="/prev.png" />
 
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
